--- a/bin/ca/csf/dominionchat/Client.fxml
+++ b/bin/ca/csf/dominionchat/Client.fxml
@@ -11,29 +11,28 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
 
-<VBox alignment="CENTER" prefHeight="300.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="ca.csf.dominionchat.ClientController">
-   <children>
-   	<Label Text="EPIC_CHATZ_DOMINION"/>
-   	<HBox alignment="CENTER" VBox.vgrow="ALWAYS">
-      <children>
-      		<TextField fx:id="addressField"/>
-      		<Label Text=":" />
-      		<TextField fx:id="portField" maxWidth="75.0"/>
-      		<Button fx:id="connectButton" Text="Connecter" onAction="#connectToServer">
-		</Button>
-      </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-   	</HBox>
-   	<TextArea editable="false">
+<VBox alignment="CENTER" prefHeight="300.0" prefWidth="500.0"
+	xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
+	fx:controller="ca.csf.dominionchat.ClientController">
+	<children>
+		<Label Text="EPIC_CHATZ_DOMINION" />
+		<HBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+			<TextField fx:id="addressField" Text="localhost"/>
+			<Label Text=":" />
+			<TextField fx:id="portField" maxWidth="75.0" Text="4444"/>
+		</HBox>
+		<HBox alignment="TOP_CENTER">
+			<Button fx:id="connectButton" Text="Connecter" onAction="#connectToServer" />
+			<Button fx:id="disconnectButton" Text="Déconnecter" onAction="#disconnectFromServer" />
+		</HBox>
+		<TextArea fx:id="chatArea" editable="false">
 
-	</TextArea>
-   	<TextField>
-	</TextField>
-   	<Button fx:id="sendMessageButton" Text="Envoyer" />
-   </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
+		</TextArea>
+		<TextField>
+		</TextField>
+		<Button fx:id="sendMessageButton" Text="Envoyer" />
+	</children>
+	<padding>
+		<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+	</padding>
 </VBox>
